[options.extra_require]
testing = 
flake8>=3.9.2
tox>=3.24.3
pytest>=6.2.5
pytest-cov>=2.12.1
mypy>=0.910
python-dotenv>=0.20.0

[options]
packages =
    fusionbase
install_requires =
    requests-toolbelt
          tqdm
          rich
python_requires = >=3.6
package_dir =
    =fusionbase
zip_safe = no

[options.package_data]
fusionbase = py.typed

[flake8]
max-line-length = 160